@@ -1,3 +1,12 @@
+2008-08-13  Simon Hausmann  <hausmann@webkit.org>
+
+        Reviewed by Holger.
+
+        Adjusted the length-list-parser layout test to compensate for the subtle difference of
+        dropping a sign for a "negative zero" as a result of the QString::vsprintf use.
+
+        * platform/qt/svg/dom/length-list-parser-expected.txt: Added.
+
 2008-08-12  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Anders Carlsson.
